--- a/assets/synthesis/texture/daoguang/bubing_daoguang.plist
+++ b/assets/synthesis/texture/daoguang/bubing_daoguang.plist
@@ -4,230 +4,245 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>qibing_zidan_2_00000.png</key>
+            <key>bubing_daoguang_3_00000.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{106,-117}</string>
+                <string>{124,-53}</string>
                 <key>spriteSize</key>
-                <string>{84,80}</string>
+                <string>{104,102}</string>
                 <key>spriteSourceSize</key>
-                <string>{84,80}</string>
+                <string>{104,102}</string>
                 <key>textureRect</key>
-                <string>{{178,384},{84,80}}</string>
+                <string>{{0,312},{104,102}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bubing_daoguang_3_00001.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{124,-53}</string>
+                <key>spriteSize</key>
+                <string>{104,102}</string>
+                <key>spriteSourceSize</key>
+                <string>{104,102}</string>
+                <key>textureRect</key>
+                <string>{{0,414},{104,102}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bubing_daoguang_3_00002.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{129,-43}</string>
+                <key>spriteSize</key>
+                <string>{120,132}</string>
+                <key>spriteSourceSize</key>
+                <string>{120,132}</string>
+                <key>textureRect</key>
+                <string>{{0,1152},{120,132}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bubing_daoguang_3_00003.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{129,-43}</string>
+                <key>spriteSize</key>
+                <string>{120,132}</string>
+                <key>spriteSourceSize</key>
+                <string>{120,132}</string>
+                <key>textureRect</key>
+                <string>{{0,1284},{120,132}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>bubing_daoguang_3_00004.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{141,-66}</string>
+                <key>spriteSize</key>
+                <string>{102,128}</string>
+                <key>spriteSourceSize</key>
+                <string>{102,128}</string>
+                <key>textureRect</key>
+                <string>{{0,516},{102,128}}</string>
                 <key>textureRotated</key>
                 <true/>
             </dict>
-            <key>qibing_zidan_2_00001.png</key>
+            <key>bubing_daoguang_3_00005.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{66,-103}</string>
+                <string>{141,-66}</string>
                 <key>spriteSize</key>
-                <string>{172,102}</string>
+                <string>{102,128}</string>
                 <key>spriteSourceSize</key>
-                <string>{172,102}</string>
+                <string>{102,128}</string>
                 <key>textureRect</key>
-                <string>{{378,186},{172,102}}</string>
+                <string>{{0,618},{102,128}}</string>
                 <key>textureRotated</key>
                 <true/>
             </dict>
-            <key>qibing_zidan_2_00002.png</key>
+            <key>bubing_daoguang_3_00006.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{58,-96}</string>
+                <string>{127,-66}</string>
                 <key>spriteSize</key>
-                <string>{190,128}</string>
+                <string>{108,126}</string>
                 <key>spriteSourceSize</key>
-                <string>{190,128}</string>
+                <string>{108,126}</string>
                 <key>textureRect</key>
-                <string>{{0,0},{190,128}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>qibing_zidan_2_00003.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{59,-78}</string>
-                <key>spriteSize</key>
-                <string>{188,154}</string>
-                <key>spriteSourceSize</key>
-                <string>{188,154}</string>
-                <key>textureRect</key>
-                <string>{{190,0},{188,154}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>qibing_zidan_2_00004.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{60,-82}</string>
-                <key>spriteSize</key>
-                <string>{186,148}</string>
-                <key>spriteSourceSize</key>
-                <string>{186,148}</string>
-                <key>textureRect</key>
-                <string>{{0,128},{186,148}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>qibing_zidan_2_00005.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{60,-87}</string>
-                <key>spriteSize</key>
-                <string>{186,138}</string>
-                <key>spriteSourceSize</key>
-                <string>{186,138}</string>
-                <key>textureRect</key>
-                <string>{{186,154},{186,138}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>qibing_zidan_2_00006.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{60,-99}</string>
-                <key>spriteSize</key>
-                <string>{186,108}</string>
-                <key>spriteSourceSize</key>
-                <string>{186,108}</string>
-                <key>textureRect</key>
-                <string>{{378,0},{186,108}}</string>
+                <string>{{0,720},{108,126}}</string>
                 <key>textureRotated</key>
                 <true/>
             </dict>
-            <key>qibing_zidan_2_00007.png</key>
+            <key>bubing_daoguang_3_00007.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{60,-102}</string>
+                <string>{127,-66}</string>
                 <key>spriteSize</key>
-                <string>{186,102}</string>
+                <string>{108,126}</string>
                 <key>spriteSourceSize</key>
-                <string>{186,102}</string>
+                <string>{108,126}</string>
                 <key>textureRect</key>
-                <string>{{0,276},{186,102}}</string>
+                <string>{{0,828},{108,126}}</string>
+                <key>textureRotated</key>
+                <true/>
+            </dict>
+            <key>bubing_daoguang_3_00008.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{126,-70}</string>
+                <key>spriteSize</key>
+                <string>{108,120}</string>
+                <key>spriteSourceSize</key>
+                <string>{108,120}</string>
+                <key>textureRect</key>
+                <string>{{0,936},{108,120}}</string>
+                <key>textureRotated</key>
+                <true/>
+            </dict>
+            <key>bubing_daoguang_3_00009.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{126,-70}</string>
+                <key>spriteSize</key>
+                <string>{108,120}</string>
+                <key>spriteSourceSize</key>
+                <string>{108,120}</string>
+                <key>textureRect</key>
+                <string>{{0,1044},{108,120}}</string>
+                <key>textureRotated</key>
+                <true/>
+            </dict>
+            <key>bubing_daoguang_3_00010.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{140,-87}</string>
+                <key>spriteSize</key>
+                <string>{94,104}</string>
+                <key>spriteSourceSize</key>
+                <string>{94,104}</string>
+                <key>textureRect</key>
+                <string>{{0,124},{94,104}}</string>
+                <key>textureRotated</key>
+                <true/>
+            </dict>
+            <key>bubing_daoguang_3_00011.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{140,-87}</string>
+                <key>spriteSize</key>
+                <string>{94,104}</string>
+                <key>spriteSourceSize</key>
+                <string>{94,104}</string>
+                <key>textureRect</key>
+                <string>{{0,218},{94,104}}</string>
+                <key>textureRotated</key>
+                <true/>
+            </dict>
+            <key>bubing_daoguang_3_00012.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{145,-133}</string>
+                <key>spriteSize</key>
+                <string>{72,56}</string>
+                <key>spriteSourceSize</key>
+                <string>{72,56}</string>
+                <key>textureRect</key>
+                <string>{{0,50},{72,56}}</string>
+                <key>textureRotated</key>
+                <true/>
+            </dict>
+            <key>bubing_daoguang_3_00013.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{145,-133}</string>
+                <key>spriteSize</key>
+                <string>{72,56}</string>
+                <key>spriteSourceSize</key>
+                <string>{72,56}</string>
+                <key>textureRect</key>
+                <string>{{56,68},{72,56}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>qibing_zidan_2_00008.png</key>
+            <key>bubing_daoguang_3_00014.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{61,-108}</string>
+                <string>{146,-139}</string>
                 <key>spriteSize</key>
-                <string>{184,92}</string>
+                <string>{68,50}</string>
                 <key>spriteSourceSize</key>
-                <string>{184,92}</string>
+                <string>{68,50}</string>
                 <key>textureRect</key>
-                <string>{{186,292},{184,92}}</string>
+                <string>{{0,0},{68,50}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>qibing_zidan_2_00009.png</key>
+            <key>bubing_daoguang_3_00015.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{66,-113}</string>
+                <string>{146,-139}</string>
                 <key>spriteSize</key>
-                <string>{178,86}</string>
+                <string>{68,50}</string>
                 <key>spriteSourceSize</key>
-                <string>{178,86}</string>
+                <string>{68,50}</string>
                 <key>textureRect</key>
-                <string>{{0,378},{178,86}}</string>
+                <string>{{68,0},{68,50}}</string>
                 <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>qibing_zidan_2_00010.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{116,-115}</string>
-                <key>spriteSize</key>
-                <string>{70,82}</string>
-                <key>spriteSourceSize</key>
-                <string>{70,82}</string>
-                <key>textureRect</key>
-                <string>{{258,384},{70,82}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>qibing_zidan_2_00011.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{116,-119}</string>
-                <key>spriteSize</key>
-                <string>{70,74}</string>
-                <key>spriteSourceSize</key>
-                <string>{70,74}</string>
-                <key>textureRect</key>
-                <string>{{328,384},{70,74}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>qibing_zidan_2_00012.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{115,-124}</string>
-                <key>spriteSize</key>
-                <string>{70,62}</string>
-                <key>spriteSourceSize</key>
-                <string>{70,62}</string>
-                <key>textureRect</key>
-                <string>{{398,358},{70,62}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>qibing_zidan_2_00013.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{116,-125}</string>
-                <key>spriteSize</key>
-                <string>{68,52}</string>
-                <key>spriteSourceSize</key>
-                <string>{68,52}</string>
-                <key>textureRect</key>
-                <string>{{398,420},{68,52}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>qibing_zidan_2_00014.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{115,-132}</string>
-                <key>spriteSize</key>
-                <string>{6,36}</string>
-                <key>spriteSourceSize</key>
-                <string>{6,36}</string>
-                <key>textureRect</key>
-                <string>{{372,154},{6,36}}</string>
-                <key>textureRotated</key>
-                <false/>
+                <true/>
             </dict>
         </dict>
         <key>metadata</key>
@@ -239,13 +254,13 @@
             <key>premultiplyAlpha</key>
             <false/>
             <key>realTextureFileName</key>
-            <string>qibing_zidan_2.png</string>
+            <string>bubing_daoguang.png</string>
             <key>size</key>
-            <string>{486,472}</string>
+            <string>{128,1416}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:a3ead8dc47f5dcfcc7cff388e750848f:75b4a5b61dc9e44238f15f0666a158c9:565ce1eefcb1c1e9c5e14289666ef40b$</string>
+            <string>$TexturePacker:SmartUpdate:77e04e908a17439580c25ff0c956df63:11d652f855578d703505fc0a5d0e5cd6:559da71b2f31a4a75705410919c2018f$</string>
             <key>textureFileName</key>
-            <string>qibing_zidan_2.png</string>
+            <string>bubing_daoguang.png</string>
         </dict>
     </dict>
 </plist>
